# elastic-beanstalk-deploy

./: .gitignore  CHANGELOG.md  Makefile  README.md  ebdeploy.yml.example  pyproject.toml
.claude/: settings.local.json
ebdeploy/: __init__.py  archiver.py  aws_client.py  cli.py  config.py  deployer.py  exceptions.py  git_utils.py  temp_creds.py
tests/: test_ebdeploy.py
