[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebdeploy"
version = "0.1.0"
description = "Deploy to AWS Elastic Beanstalk"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["aws", "elastic-beanstalk", "deploy", "devops"]

dependencies = [
    "boto3>=1.34",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "moto[s3,elasticbeanstalk]>=5.0"]

[project.scripts]
ebdeploy = "ebdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ebdeploy*"]
